2001-07-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc, actors.cc: Start schedule even if NPC is not within
	world.  Fixes SI Moonshade-kidnap bug.
	
	* Exult Studio now has a 'save map' option.  Files are stored in
	the <PATCH> directory (specified in 'exult.cfg'.

2001-07-11  Max Horn <max@quendi.de>
	* data/quotes.txt: new quote ;)
	* various files: removed the emacs header that force the fundamental mode to be used
	
2001-07-11  Ryan Nunn <triforce@merlin.net.au>
	* objs/chunks.cc : Added shapes 394 and 941 as mountain types for
	  dungeon checking in Serpent Isle. Removed the per Superchuck dungeon
	  hack for Knights Test and Silver Seed quest. This should fix all the
	  dungeon rendering errors in SI.

2001-07-11  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/Makefile.am: add stuff needed for exult_studio.glade. It is
	  now installed in the right place and included in the dist.

2001-07-11  Jeff Freedman  <jeff@amy.nerble.net>
	* npcnear.cc: Fixed Lucilla 'sleep' bug.  Also, delay was being
	set to 3000 seconds; now set to 5 secs. between checks.

2001-07-10  Jeff Freedman  <jeff@amy.nerble.net>
	* /mapedit: Chunk browser added.  And you can drag a chunk
	(terrain) into Exult.

2001-07-10  Dominik Reichardt <gigdr@tesionmail.de>
	* Makefile.cygwin, Makefile.win32: Travis' updates

2001-07-09  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/: updated FAQ and changed the layout and the layout files
	* Faq: updated

2001-07-09  Ryan Nunn <triforce@merlin.net.au>
	* gamewin.cc: Casting an unsigned char* to char*
	* tools/expack.cc: Expack will now produce a header for any flex it
	  creates. The Header is called name_flx.h or simlar. The header
	  contains #defines for all the files that have been put in it.

2001-07-09  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* game.cc, ??game.cc, exultmenu.cc, gamewin.*, keyactions.cc:
	fixed more annoying palette-flashes. cleaned up a bit